fix main-content overflow-y

--- a/src/app/main-content/main-contents/main-content-body/main-content-body.component.scss
+++ b/src/app/main-content/main-contents/main-content-body/main-content-body.component.scss
@@ -1,5 +1,6 @@
 .main-messages {
-  width: 100%;
+  min-height: 100%;
+display: flex;
   .main-messages-container {
     display: flex;
     flex-direction: column;
@@ -34,8 +35,6 @@
       line-height: normal;
     }
   }
-  height: 100%;
-  display: block;
   .message-container {
     display: flex;
     flex-direction: row;
@@ -97,7 +96,7 @@
         line-height: normal;
         cursor: pointer;
         transition: all 0.3s;
-        text-wrap: nowrap;
+        white-space: nowrap;
         &:hover {
           color: #444df2;
         }
@@ -149,7 +148,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-      text-wrap: nowrap;
+      white-space: nowrap;
     }
     .message-text {
       padding: 15px;
@@ -283,7 +282,7 @@
       line-height: normal;
       cursor: pointer;
       transition: all 0.3s;
-      text-wrap: nowrap;
+      white-space: nowrap;
       &:hover {
         color: #444df2;
         font-weight: bold;
@@ -327,7 +326,7 @@
       color: #fff;
       transition: all 0.3s;
       z-index: -1;
-      text-wrap: nowrap;
+      white-space: nowrap;
     }
   }
   @keyframes borderDisappear {
