--- a/src/app/main-content/main-contents/main-content-header/main-content-header.component.scss
+++ b/src/app/main-content/main-contents/main-content-header/main-content-header.component.scss
@@ -34,7 +34,7 @@
       line-height: normal;
       border-radius: 100px;
       padding: 6px 10px;
-      text-wrap: nowrap;
+      white-space: nowrap;
       cursor: pointer;
       transition: all 0.3s;
       &:hover {
